Overhaul web session inspectors
